feat(ci/cd): update testing workflow and add deployment workflow
Updated testing workflow to include `develop` and `release` branches.
Added a new deployment workflow to automate testing, Docker image building, and Kubernetes manifest updates on PR merge.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,8 @@ name: Testing Workflow
 on:
   push:
     branches:
+      - develop
+      - release
       - feature/*
       - bugfix/*
       - hotfix/*
