--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,10 +2,16 @@ name: Testing Workflow
 on:
   push:
     branches:
+      - develop
+      - release
       - feature/*
       - bugfix/*
       - hotfix/*
       - chore/*
+  pull_request:
+    branches:
+      - develop
+      - release
 jobs:
   test:
     name: Test
