--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,13 +4,17 @@ on:
   pull_request:
     branches:
       - main
+  pull_request_target:
+    types:
+      - closed
+    branches:
+      - main
 
 jobs:
   test-and-build:
-    name: Build & Test (PR)
+    name: Build & Test (Pre-Merge)
     runs-on: ubuntu-latest
-    outputs:
-      version: ${{ steps.extract-version.outputs.version }}
+    if: github.event_name == 'pull_request'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -25,23 +29,41 @@ jobs:
       - name: Run tests
         run: mvn test -B
 
+  build-and-push:
+    name: Build & Push Docker Image
+    runs-on: ubuntu-latest
+    needs: test-and-build
+    if: github.event_name == 'pull_request_target' && github.event.pull_request.merged == true
+    outputs:
+      version: ${{ steps.extract-version.outputs.version }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup JDK 22
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '22-ea'
+          cache: maven
+
       - name: Extract version from pom.xml
         id: extract-version
         run: |
           echo "Extracting version from pom.xml..."
           NEW_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
           echo "NEW_VERSION=$NEW_VERSION"
-          echo "::set-output name=version::$NEW_VERSION"
+          echo "version=$NEW_VERSION" >> "$GITHUB_OUTPUT"
 
       - name: Build & Push Docker Image
-        if: github.event.action == 'closed' && github.event.pull_request.merged == true
-        run: mvn spring-boot:build-image -DskipTests -DdockerPassword=${{ secrets.DOCKER_PASSWORD }}
+        run: |
+          mvn spring-boot:build-image -DskipTests -DdockerPassword=${{ secrets.DOCKER_PASSWORD }}
 
   update-manifests:
     name: Update Kubernetes Manifest
     runs-on: ubuntu-latest
-    needs: test-and-build
-    if: github.event.action == 'closed' && github.event.pull_request.merged == true
+    needs: build-and-push
+    if: needs.build-and-push.outputs.version != ''
     steps:
       - name: Checkout Kubernetes manifests repository
         uses: actions/checkout@v4
@@ -54,14 +76,14 @@ jobs:
       - name: Update Kubernetes manifests
         working-directory: k8s/manifests/applications
         run: |
-          NEW_VERSION="${{ needs.test-and-build.outputs.version }}"
+          NEW_VERSION="${{ needs.build-and-push.outputs.version }}"
           sed -i "s|\(image: jhosepmyr/workshop-management:\).*|\1${NEW_VERSION}|" workshop-management.yaml
           git diff workshop-management.yaml
 
       - name: Commit and push changes
         working-directory: k8s/manifests/applications
         run: |
-          git config --global user.email "<>"
+          git config --global user.email "bot@github.com"
           git config --global user.name "GitHub Actions Bot"
           git add workshop-management.yaml
           if ! git diff --cached --quiet; then
