--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,19 +2,13 @@ name: Deployment Workflow
 
 on:
   pull_request:
-    branches:
-      - main
-  pull_request_target:
-    types:
-      - closed
-    branches:
-      - main
-
+    branches: [ main ]
+    types: [ opened, synchronize, closed ]
 jobs:
   test-and-build:
     name: Build & Test (Pre-Merge)
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
+    if: github.event.action == 'opened' || github.event.action == 'synchronize'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -32,8 +26,7 @@ jobs:
   build-and-push:
     name: Build & Push Docker Image
     runs-on: ubuntu-latest
-    needs: test-and-build
-    if: github.event_name == 'pull_request_target' && github.event.pull_request.merged == true
+    if: github.event.action == 'closed' && github.event.pull_request.merged == true
     outputs:
       version: ${{ steps.extract-version.outputs.version }}
     steps:
