--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,11 +13,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup JDK 22
+      - name: Setup JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: '22-ea'
+          java-version: '21'
           cache: maven
 
       - name: Run tests
@@ -33,11 +33,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup JDK 22
+      - name: Setup JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: '22-ea'
+          java-version: '21'
           cache: maven
 
       - name: Extract version from pom.xml
@@ -80,6 +80,7 @@ jobs:
           git config --global user.name "GitHub Actions Bot"
           git add workshop-management.yaml
           if ! git diff --cached --quiet; then
+            NEW_VERSION=$(echo "${{ needs.build-and-push.outputs.version }}" | tr -d '\n')
             git commit -m "Update workshop-management image to ${NEW_VERSION}"
             git push origin main
           else
