chore: upgrades java version to 21
Updates java version from 22 to 21.

Also configures the docker image to use the correct java version.

Adds a new Security Configuration file that enable CORS from localhost:3000

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.workshop-n-gine.platform</groupId>
 	<artifactId>workshop-management</artifactId>
-	<version>1.2.0</version>
+	<version>1.3.0</version>
 	<name>workshop-management</name>
 	<description>workshop-management</description>
 	<url/>
@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>22</java.version>
+		<java.version>21</java.version>
 		<spring-cloud.version>2024.0.0</spring-cloud.version>
 		<dockerPassword>dockerPassword</dockerPassword>
 	</properties>
@@ -129,8 +129,13 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<image>
+						<builder>paketobuildpacks/builder-jammy-java-tiny:latest</builder>
 						<name>jhosepmyr/${project.artifactId}:${project.version}</name>
 						<publish>true</publish>
+						<env>
+							<BP_JVM_VERSION>21</BP_JVM_VERSION>
+							<BP_JVM_TYPE>JDK</BP_JVM_TYPE>
+						</env>
 					</image>
 					<docker>
 						<publishRegistry>
