--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Eureka Configuration
 eureka.client.serviceUrl.defaultZone=http://${EUREKA_SERVER_HOST:localhost}:${EUREKA_SERVER_PORT:8761}/eureka
+eureka.client.enabled=false
 
 # Swagger Configuration
 springdoc.swagger-ui.path=/workshops-management/swagger-ui.html
